--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,3 +1,5 @@
+<div class='container-fluid' style="min-height: 100%">
+
 
 
  <div class="col-md-8 col-md-offset-2">
@@ -178,4 +180,8 @@ There is no photo for this listing yet.</p>
        <%= link_to '<< Back to Main page', root_path %>
     </div>
     <br>
+</div>
+
+
+
 </div>
