--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,6 @@
 
 
 
-
-
-
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
@@ -29,13 +25,7 @@
 
 <%= render partial: 'layouts/navbar' %>
 
-  <!-- <div id="header">
-    <% if signed_in? -%>
-      <%= button_to t(".sign_out"), sign_out_path, method: :delete %>
-    <% else -%>
-      <%= link_to t(".sign_in"), sign_in_path %>
-    <% end -%>
-  </div>-->
+ 
 
   <% flash.each do |key, value| %>
 
@@ -57,5 +47,13 @@
 
 
   <%= yield %>
+
+
+
+<%= render partial: 'layouts/footer' %>
+
+
+
+
 </body>
 </html>
