--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -1,3 +1,5 @@
+<div class='container-fluid' style="min-height: 100%">
+
 <div class="col-md-12">
   <li class="list-group-item">
     <h1>Edit your listing</h1>
@@ -192,7 +194,7 @@
 
 </div>
 
-
+</div>
 
 <script>
 
