--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -1,3 +1,5 @@
+<div class='container-fluid' style="min-height: 100%">
+
   <div class="col-md-12">
   <li class="list-group-item">
   <h2>Create a new listing / Become a Host</h2>
@@ -34,3 +36,4 @@
 </div>
 
 
+</div>
