--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,5 @@
+<div class='container-fluid' style="min-height: 100%">
+
 
 <div class="col-md-8 col-md-offset-2" >
   <li class="list-group-item">
@@ -58,6 +60,9 @@
     </div><br>
 </div>
 
+</li>
+</div>
+</div>
 
 
 <script>
