--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,8 @@
+<div class='container-fluid' style="min-height: 100%">
+
+
+
+
 
 <div class="col-md-4 col-md-offset-4" >
   <li class="list-group-item" style="text-align: center;">
@@ -44,3 +49,5 @@
 </li>
 </div>
 <br>
+
+</div>
