--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,6 @@
+<div class='container-fluid' style="min-height: 100%">
+
+
 <div class="col-md-8 col-md-offset-2" >
 <div class="list-group">
   <div class="list-group-item">
@@ -236,4 +239,8 @@ No profile photo available.</p>
        <%= link_to '<< Back to Main page', root_path %>
     </div>
     <br>
+</div>
+
+
+
 </div>
