responsive google map

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -8,10 +8,11 @@
 <h1><%= @listing.name %></h1>
 
 <br>
-<div class="well"
-<div style="float: right; width: 350px ">
-<%= render "reservations/form" %>
-</div>
+  <div class="well", style="float: right; max-width: 350px;">
+    
+    <%= render "reservations/form" %>
+    
+  </div>
 <br>
 
 
@@ -37,8 +38,9 @@
 
 <br> 
 
+
 <p>Location map:</p>
-<div class="google-maps"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3983.8517521297!2d101.62779131475729!3d3.133844997718065!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31cc4939007dcd87%3A0x1f08990385cee5b8!2sNEXT+Academy+%7C+The+Best+Coding+School!5e0!3m2!1sen!2smy!4v1515652070334" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe></div>
+<div class="map-responsive"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15935.40700848405!2d101.62998!3d3.133845!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1f08990385cee5b8!2sNEXT+Academy+%7C+The+Best+Coding+School!5e0!3m2!1sen!2smy!4v1516247801569" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe></div>
 
 <br>
 
